Added modal for flags and candidates lists

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -7,11 +7,15 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
+
+  <ion-input type="text" placeholder="Add a Candidate"></ion-input>
+  <ion-button expand="full">Insert Candidate</ion-button>
+  <ion-list>
+    <!-- <ion-item>
+      <ion-label>Candidate 1</ion-label>
+    </ion-item> -->
+  </ion-list>
+
 
   <app-explore-container name="Tab 2 page"></app-explore-container>
 </ion-content>
