--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -7,11 +7,17 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
+
+  <ion-list>
+    <ion-item (click)="presentActionSheet()">
+      <ion-label>Candidate 1</ion-label>
+    </ion-item>
+  </ion-list>
+
+
+  
+
+
 
   <app-explore-container name="Tab 1 page"></app-explore-container>
 </ion-content>
